--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ footer-links:
   email: 1873574465@qq.com
   facebook:
   flickr:
-  github: zzliy
+  github: zzily
   googleplus: # anything in your profile username that comes after plus.google.com/
   instagram:
   linkedin:
